     backwards compatibility for inline owner_side= at the cost of
     confusing syntax (due to (possible) duplicate side information).
     This also adds SSF support in [store_villages].
   * Added support for resistance_multiplier= key in [harm_unit]
   * Fixed bug #19498: [modify_unit] duplicating units if x,y changed
 * Miscellaneous and bug fixes:
   * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
     platforms using XDG layout (no compiled-in preferences path override,
     bug #19318)
   * Fixed unit sound animation timings wherever {SOUND:SLOW}, {SOUND:POISON},
     and several macros from animation-utils2.cfg are used (see bug #19274)
   * Restart is no longer required to toggle desktop notifications
   * Display the savegame version when warning the user about unsupported or
     mismatched versions (bug #7243)
   * Implemented feature request for difficulty changing during campaigns.
     (see bug #10978)
   * The saved games cache file is now save_index instead of save_index.gz, and
     it is compressed when the Compressed Saves option is enabled in Advanced
     Preferences (patch #3115)
   * Show base terrain description if none for overlay (bug #19411)
   * Added wesmage tool to test SDL image manipulation functions.
   * Fixed: A possible NULL-pointer deference in get_unit_type_function.
   * Changed: Default man installation directory now confirms to FHS.
   * Added: New floating point emulation code.
   * Make Wolf Rider and Wolf raise their heads if and only if unit is
     submerged: forums.wesnoth.org/viewtopic.php?f=4&t=36212

Version 1.10.0:
 * Campaigns:
   * Legend of Wesmere:
     * Scenario 03: Fixed bug #19067: Control over Galtrid's side stays with the
       player after the arrival of Kalenz
     * Scenario 22: Fixed bug #19236: Cleodil was missing and no recall list
   * An Orcish Incursion:
     * Scenario 3: select a new unit with the Adviser (sic) role for dialogs if