@@ -95,6 +95,7 @@ Version 1.11.0-svn:
      This also adds SSF support in [store_villages].
    * Added support for resistance_multiplier= key in [harm_unit]
    * Fixed bug #19498: [modify_unit] duplicating units if x,y changed
+   * Added inline SLF support in [scroll_to], by using the first matching location
  * Miscellaneous and bug fixes:
    * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
      platforms using XDG layout (no compiled-in preferences path override,
